# HelloWorld_With_CMake

./: README.md
HelloWorld/: CMakeLists.txt
HelloWorld/src/: main.c
